--- a/pgoconfig.json
+++ b/pgoconfig.json
@@ -1,6 +1,9 @@
 {
     "Config": {
         "ads": {
+            "AdsTime": false
+            "AdsStart: "07:00"
+            "AdsStops: "22:00"
             "BannerDuration": 180,
             "InterstitialDuration": 1440
         }
