--- a/pgoconfig.json
+++ b/pgoconfig.json
@@ -1,6 +1,9 @@
 {
     "Config": {
         "ads": {
+            "AdsTime": true,
+            "AdsStart": "07:00",
+            "AdsStop": "22:00",
             "BannerDuration": 180,
             "InterstitialDuration": 1440
         }
