--- a/pgoconfig.json
+++ b/pgoconfig.json
@@ -4,8 +4,8 @@
             "AdsTime": true,
             "AdsStart": "07:00",
             "AdsStop": "22:00",
-            "BannerDuration": 180,
-            "InterstitialDuration": 360
+            "BannerDuration": 30,
+            "InterstitialDuration": 180
         },
         "menu":{
             "iv100": true,
@@ -15,7 +15,8 @@
             "freegym": true,
             "quest": true,
             "friend": true,
-            "raid": false
+            "raid": false,
+            "teamrocket":true
         },
         "menu_message":{
             "iv100": "",
@@ -25,7 +26,8 @@
             "freegym": "",
             "quest": "",
             "friend": "",
-            "raid": ""
+            "raid": "",
+            "teamrocket":""
         }
     }
 }
