--- a/pgoconfig.json
+++ b/pgoconfig.json
@@ -6,6 +6,10 @@
             "AdsStop": "22:00",
             "BannerDuration": 2,
             "InterstitialDuration": 4,
+            "bannerKeyword": true,
+            "interstitialKeyword": true,
+            "anchoredKeyword": true,
+            "appopenKeyword":false,
             "keyword":["shopping","game","gaming","real estate","health","fitnes","tech","technology","travel","education","weight loss","gadget","phone"]
         },
         "menu":{
