--- a/pgoconfig.json
+++ b/pgoconfig.json
@@ -13,7 +13,7 @@
             "anchoredKeyword": true,
             "rewardedKeyword": true,
             "appopenKeyword":false,
-            "keyword":["shopping","game","gaming","real estate","health","fitnes","tech","technology","travel","education","weight loss","gadget","phone"]
+            "keyword":["shopping","game","gaming","real estate","health","fitnes","tech","technology","travel","education","weight loss","gadget","phone","cloud hosting","hosting","digital marketing"]
         },
         "menu":{
             "iv100": true,
