--- a/pgoconfig.json
+++ b/pgoconfig.json
@@ -17,7 +17,7 @@
             "keyword":["shopping","game","gaming","real estate","health","fitnes","tech","technology","travel","education","weight loss","gadget","phone","cloud hosting","hosting","digital marketing"]
         },
         "menu":{
-            "form": false,
+            "form": true,
             "top100": true,
             "iv100": true,
             "ditto": true,
